--- a/Probability and Stochastics/Probability and Stochastics.tex
+++ b/Probability and Stochastics/Probability and Stochastics.tex
@@ -1142,7 +1142,7 @@ $\mu f^+<\infty$ 以及 $\mu f^-<\infty$。
 \begin{proof}
   若可积函数 $g$ 使得 $f_n\geq g$，那么 $A=\{x\in E:g(x)\in \mathbb{R}\}$ 的补集是零测集(练习)。
   那么几乎处处 $f_n1_A=f_n$ 以及 $g1_A=g$。由于 $g1_A$ 是实值函数，所以
-  $f_n1_A-g1_A$ 是有意义的，故 $f_n1_A-g1_A\in \mathcal{E}_+$ 且可积，根据uFatou 引理，有
+  $f_n1_A-g1_A$ 是有意义的，故 $f_n1_A-g1_A\in \mathcal{E}_+$ 且可积，根据 Fatou 引理，有
   \begin{align*}
     \mu\bigl(\liminf (f_n1_A)\bigr)-\mu(g1_A)&=\mu\bigl(\liminf (f_n1_A)- g1_A\bigr)
     =\mu\bigl(\liminf (f_n1_A-g1_A)\bigr)\\
